fixed bug on selected cfg menu and wrong color

--- a/src/styles/ConfigurationPage.scss
+++ b/src/styles/ConfigurationPage.scss
@@ -29,7 +29,7 @@ $lg: 1200px;
     
 
 .configuration-option.selected {
-    border: 1px solid #53535333;
+    border: 1px solid #e5e6eb;
     border-left: 0;
     border-right: 0;
 }
